Подключение контекста БД к приложению

--- a/WebStore/appsettings.json
+++ b/WebStore/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;Inintial Catalog=NesterovWebStore.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
