Конфигурация подключения Identity

--- a/WebStore/appsettings.json
+++ b/WebStore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=NesterovWebStore.db"
+    "SqlServer": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=NesterovWebStore.db;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
